Fix text alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -86,7 +86,7 @@ p {
     margin: 10px 0;
 }
 
-.education h5 {
+.education h3 {
     text-align: center;
 }
 
